<resources>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="login">Login</string>
  <string name="logout">Logout</string>
  <string name="register">Register</string>
  <string name="register_and_login">Register &amp; Login</string>
  <string name="rescan">Rescan now</string>
  <string name="internal_storage">Internal Storage</string>
  <string name="tracks">Tracks</string>
  <string name="albums">Albums</string>
  <string name="artists">Artists</string>
  <string name="users">Users</string>
  <string name="top_hits">Top Hits</string>
  <string name="top_albums">Top Albums</string>
  <string name="albums_and_eps">Albums and EPs</string>
  <string name="other_releases">Other releases</string>
  <string name="playlist_details">Playlist Details</string>
  <string name="album_details">Album Details</string>
  <string name="search">Search</string>
  <string name="playlist">Playlist</string>
  <string name="shuffle_on_label">Shuffle is on</string>
  <string name="shuffle_off_label">Shuffle is off</string>
  <string name="repeat_on_label">Repeat is on</string>
  <string name="repeat_off_label">Repeat is off</string>
  <string name="unknown">unknown</string>
  <string name="no_track">no track</string>
  <string name="save_playlist">Save the current playlist</string>
  <string name="create_playlist">Create playlist</string>
  <string name="name_playlist">Title</string>
  <string name="login_name_label">E-Mail/Username</string>
  <string name="login_username">Username</string>
  <string name="login_password">Password</string>
  <string name="login_password_confirmation">Password confirmation</string>
  <string name="account_email_label">E-Mail (optional)</string>
  <string name="error_field_required">This field is required</string>
  <string name="error_passwords_dont_match">Passwords don\'t match</string>
  <string name="error_invalid_credentials">Username or password incorrect.</string>
  <string name="error_invalid_account">Account rejected by server.</string>
  <string name="error_communication">Unable to authenticate. Please check your connection.</string>
  <string name="error_simultaneous_streams">Action not allowed, account is in use elsewhere.</string>
  <string name="error_account_expired">Your account has expired.</string>
  <string name="auth_logged_in">Logged into %1$s</string>
  <string name="auth_logged_out">Logged out of %1$s</string>
  <string name="local_collection_pretty_name">Local Collection</string>
  <string name="local">Local</string>
  <string name="all">All</string>
  <string name="preferences_local_collection_text">Choose the directories which should be scanned for local media.</string>
  <string name="preferences_hatchet_text">Sync your data with %1$s.</string>
  <string name="preferences_playback">Playback</string>
  <string name="preferences_equalizer">Equalizer</string>
  <string name="preferences_equalizer_text">Customize the audio output.</string>
  <string name="preferences_playback_data">Scrobble Everything</string>
  <string name="preferences_playback_data_text">Scrobble every track from every music player app on the phone to %1$s.</string>
  <string name="preferences_plug_and_play">Plug In to Play</string>
  <string name="preferences_plug_and_play_text">Starts playing music as soon as a headset is connected.</string>
  <string name="preferences_audio_quality">Preferred Audio Quality</string>
  <string name="preferences_audio_quality_text">The preferred audio quality if not connected to WiFi.</string>
  <string name="preferences_info">Info</string>
  <string name="preferences_app_version">App-Version</string>
  <string name="preferences_app_uservoice">Feedback</string>
  <string name="preferences_app_uservoice_text">Share your ideas or ask for support.</string>
  <string name="preferences_app_sendlog">Send Log</string>
  <string name="preferences_app_sendlog_text">Send your log file for debug purposes.</string>
  <string name="preferences_app_sendlog_dialog_text">Please briefly describe the issue you are having and provide an email so we can contact you if needed. Thanks!</string>
  <string name="preferences_app_sendlog_email">Your email address</string>
  <string name="preferences_app_sendlog_issue">Issue</string>
  <string name="crash_dialog_title">Tomahawk has crashed</string>
  <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
  <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
  <string name="crash_dialog_ok_toast">Thank you !</string>
  <string name="context_menu_play">Play</string>
  <string name="context_menu_add_to_queue">Add to Queue</string>
  <string name="context_menu_add_to_playlist">Add to Playlist</string>
  <string name="context_menu_delete">Delete</string>
  <string name="context_menu_removefromplaylist">Remove from Playlist</string>
  <string name="context_menu_removefromcollection">Remove from Collection</string>
  <string name="context_menu_addtocollection">Add to Collection</string>
  <string name="context_menu_love">Love</string>
  <string name="context_menu_unlove">Unlove</string>
  <string name="context_menu_share">Share</string>
  <string name="contest_menu_share_error">You have to log into Hatchet to be able to share this playlist.</string>
  <string name="drawer_title_feed">Feed</string>
  <string name="drawer_title_collection">Collection</string>
  <string name="drawer_title_playlists">Playlists</string>
  <string name="drawer_title_lovedtracks">Favorites</string>
  <string name="drawer_title_settings">Settings</string>
  <string name="drawer_header_cloudcollections">Cloud Collections</string>
  <string name="collection_dropdown_recently_added">Recently Added</string>
  <string name="collection_dropdown_alpha_artists">Artist A-Z</string>
  <string name="collection_dropdown_play_count">Play Count</string>
  <string name="collection_dropdown_alpha_albums">Album A-Z</string>
  <string name="collection_dropdown_alpha">A-Z</string>
  <string name="history">History</string>
  <string name="preferences_bitrate_low">Normal</string>
  <string name="preferences_bitrate_medium">Good</string>
  <string name="preferences_bitrate_high">Best</string>
  <string name="drawer_open">Open Navigation Drawer</string>
  <string name="drawer_close">Close Navigation Drawer</string>
  <string name="content_header_following">Following</string>
  <string name="content_header_follow">Follow</string>
  <string name="suggest_users">Suggested people to follow</string>
  <string name="socialaction_type_follow">%1$s is now following</string>
  <plurals name="socialaction_type_love_track">
    <item quantity="one">%1$s loved a track</item>
    <item quantity="other">%1$s loved %2$d tracks</item>
  </plurals>
  <plurals name="socialaction_type_collected_track">
    <item quantity="one">%1$s collected a track</item>
    <item quantity="other">%1$s collected %2$d tracks</item>
  </plurals>
  <plurals name="socialaction_type_collected_album">
    <item quantity="one">%1$s collected an album</item>
    <item quantity="other">%1$s collected %2$d albums</item>
  </plurals>
  <plurals name="socialaction_type_collected_artist">
    <item quantity="one">%1$s collected an artist</item>
    <item quantity="other">%1$s collected %2$d artists</item>
  </plurals>
  <string name="socialaction_type_createcomment">%1$s commented on</string>
  <plurals name="socialaction_type_latchon">
    <item quantity="one">%1$s listened along to a friend</item>
    <item quantity="other">%1$s listened along to %2$d friends</item>
  </plurals>
  <plurals name="socialaction_type_createplaylist">
    <item quantity="one">%1$s created a playlist</item>
    <item quantity="other">%1$s created %2$d playlists</item>
  </plurals>
  <string name="album_by_artist">%1$s by %2$s</string>
  <string name="time_afewseconds">a few seconds ago</string>
  <plurals name="time_minute">
    <item quantity="one">a minute ago</item>
    <item quantity="other">%1$d minutes ago</item>
  </plurals>
  <plurals name="time_hour">
    <item quantity="one">an hour ago</item>
    <item quantity="other">%1$d hours ago</item>
  </plurals>
  <plurals name="time_day">
    <item quantity="one">a day ago</item>
    <item quantity="other">%1$d days ago</item>
  </plurals>
  <string name="users_playbacklog_suffix">%1$s\'s recently played</string>
  <string name="users_favorites_suffix">%1$s\'s Favorites</string>
  <string name="users_playlist_suffix">%1$s\'s Playlist</string>
  <string name="my_playbacklog">My recently played</string>
  <string name="my_favorites">My Favorites</string>
  <string name="my_playlist">My Playlist</string>
  <string name="music">Music</string>
  <string name="biography">Biography</string>
  <string name="similar">Similar</string>
  <string name="songs">Songs</string>
  <plurals name="songs_with_count">
    <item quantity="one">%1$d Song</item>
    <item quantity="other">%1$d Songs</item>
  </plurals>
  <string name="activity">Activity</string>
  <string name="followers">Followers</string>
  <string name="following">Following</string>
  <string name="followers_count">Followers: %1$d, Following: %2$d</string>
  <string name="resolver_config_redirect_button_text_log_into">Log into</string>
  <string name="resolver_config_redirect_button_text_log_out_of">Log out of</string>
  <string name="resolver_config_redirect_button_text_download_plugin">Download Plugin for</string>
  <string name="ask_access_activity_header">Want to automatically save data about all the tracks you play on Hatchet?</string>
  <string name="ask_access_activity_text1">We\'ll do that for you! Please enable our service in your system settings.</string>
  <string name="button_close">Close</string>
  <string name="view_album">View Album</string>
  <string name="authenticator_label" translate="false">Hatchet</string>
  <string name="connect">Connect</string>
  <string name="connect_headertext">Select the services you want to use. Tomahawk works better when more services are activated.</string>
  <string name="connect_header_manualresolvers">Manually installed</string>
  <string name="advanced">Advanced</string>
  <string name="info">Info</string>
  <string name="playbackpanel_seek_coachmark">You can seek through a track with a long-press on the Play button.</string>
  <string name="slidinglayout_enqueue_coachmark">Tap to add the track to the queue.</string>
  <string name="playbackfragment_navigation_coachmark_down">Pull up to see the current playlist.</string>
  <string name="playbackfragment_navigation_coachmark_up">Pull down to close the playback drawer.</string>
  <string name="playbackfragment_navigation_coachmark_center">Swipe left/right to skip to the next/previous track. Long-press to open context menu. Double-tap to add to favorites.</string>
  <string name="next_page">Next</string>
  <string name="welcome_fragment_explanation_title">Getting started</string>
  <string name="welcome_fragment_explanation_heading">Music is everywhere.\nNow you don\'t have to be.</string>
  <string name="welcome_fragment_explanation_text">Stop chasing music across the web - to services you don\'t use, or sources you don\'t have access to. Given the name or link to a song, album or playlist, Tomahawk will find the best available source for you and just play it.</string>
  <string name="welcome_fragment_hatchet_title">Want to socialize?</string>
  <string name="welcome_fragment_done_title">Done!</string>
  <string name="welcome_fragment_done_heading">All done!</string>
  <string name="welcome_fragment_done_text">Have fun exploring the app and be sure to tell us what you think!</string>
</resources>