<?xml version="1.0" encoding="utf-8"?>
<!--
/*   == This file is part of Tomahawk Player - <http://tomahawk-player.org> ===
 *
 *   Copyright 2014, Enno Gottschalk <mrmaffen@googlemail.com>
 *
 *   Tomahawk is free software: you can redistribute it and/or modify
 *   it under the terms of the GNU General Public License as published by
 *   the Free Software Foundation, either version 3 of the License, or
 *   (at your option) any later version.
 *
 *   Tomahawk is distributed in the hope that it will be useful,
 *   but WITHOUT ANY WARRANTY; without even the implied warranty of
 *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *   GNU General Public License for more details.
 *
 *   You should have received a copy of the GNU General Public License
 *   along with Tomahawk. If not, see <http://www.gnu.org/licenses/>.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView android:id="@+id/config_dialog_title_textview"
              android:layout_width="match_parent"
              android:layout_height="@dimen/abc_action_bar_default_height_material"
              android:paddingRight="@dimen/padding_large"
              android:paddingLeft="@dimen/padding_large"
              android:textSize="@dimen/text_size_verylarge"
              android:textColor="@color/primary_textcolor_inverted"
              android:gravity="center_vertical"
              android:text="@string/welcome_fragment_done_title"
              android:background="@color/tomahawk_red"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fillViewport="true">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <Space android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:layout_marginTop="@dimen/padding_large"
                       android:src="@drawable/ic_launcher"/>

            <TextView android:id="@+id/textview1"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:padding="@dimen/padding_large"
                      android:textSize="@dimen/text_size_large"
                      android:textColor="@color/primary_textcolor"
                      android:textAllCaps="true"
                      android:text="@string/welcome_fragment_done_heading"/>

            <TextView android:id="@+id/textview2"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:padding="@dimen/padding_large"
                      android:textSize="@dimen/text_size_large"
                      android:textColor="@color/primary_textcolor"
                      android:text="@string/welcome_fragment_done_text"/>

            <Space android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>